# tdd_detroid

./: .coverage  .env  .env_docker  .gitignore  Dockerfile  Makefile  README-PT.md  README.md  STEPS.md  alembic.ini  app.py  architecture.odp  cli.py  coeficiente.py  config.py  config_template.py  coverage.sh  docker-compose.yaml  for_admin.py  main.py  manual_smoke_test.sh  manual_test.sh  myapp.py  performance.py  performance_setup.py  pyproject.toml  report.html  requirements.txt  run.sh  sample.db  test-requirements.txt  test.db  test_banco_dados.py  tmp.txt
alembic/: env.py
architecture/: README.md  components-phase1.drawio
commands/: aluno.py  curso.py  materia.py
diagrams/: README.md  components.drawio  core-entities.drawio
htmlcov/: index.html  src___init___py.html  src_aluno_py.html  src_curso_py.html  src_gerenciador_curso_py.html  src_materia_py.html  status.json
kubernetes/: config-map.yaml  deployments-aio-pod.yaml  deployments-list.yaml  deployments.yaml  network-policy.yaml  services.yaml
postgrest/: Dockerfile  postgrest.config
src/: aluno.py  alunos.py  banco_dados.py  catalogo_curso.py  cli_helper.py  codigo_qualquer.py  config.py  constants.c  constants.py  context.py  controller.py  coordenador.py  coordenador_curso.py  coordenador_geral.py  course.c  course.py  courses.py  curso.py  curso_bd.py  curso_modelo.py  cursos.py  database.c  database.py  db_poc.c  declarations.h  discipline.py  disciplines.py  exceptions.py  gerenciador_curso.py  main.c  manager.py  materias.py  mock_database.py  mocks.py  persister.py  processor.py  student.c  (+9 more)
(+316 files in other folders)
